# noaawc

./: .gitignore  README.md  aaa.py  global.py  pyproject.toml  setup.py  studio.ipynb  temsup.py  temwind.py  temwindjet.py  test_gif.py  test_mp4.py  test_plot.py  test_plot_cmap.py  windtemp_mp4.py
help_versions/_2.1_/: alert.txt  save_work.txt
my_tests/gif/global/: test_mp4.py  windtemp_mp4.py
my_tests/plot/local/: test_zoom.py
noaawc/: animate.py  main.py  plot.py
tests/: test_gif_surface_temp_zoom_focus_loc.py
tests/my_tests/: test_plot.py
tests/my_tests/gif/global/: test_mp4.py
tests/my_tests/plot/local/: test_zoom.py
tests/surface_temp/: test_gif_surface_temp_spin.py  test_gif_surface_temp_zoom_focus.py  test_gif_surface_temp_zoom_focus_loc.py
tests/videos/: test.avi
tests/wind_temp/: test_gif_wind_temp.py
