[tool.poetry]
name = "noaawc"
version = "0.1.0"
description = "a lib for work climate data"
authors = ["reinanbr <perseu912@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
noawclg = "^0.0.4.6"
basemap = "^1.3.6"
imageio = "^2.23.0"
psutil = "^5.9.4"
kitano = "^0.0.7"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
